[package]
name = "kamikaze_di_derive"
version = "0.1.0"
authors = ["Fabian Badoi <fabianbadoi@gmail.com>"]
edition = "2018"
description = "Exploration of Dependency Injection in Rust"
license = "MIT"
repository = "https://github.com/fabianbadoi/kamikaze_di"
homepage = "https://github.com/fabianbadoi/kamikaze_di"
readme = "README.md"
keywords = ["di", "dependency", "injection", "ioc"]
categories = ["development-tools::build-utils"]

[lib]
proc-macro = true

[features]
default = []
logging = []

[dependencies]
quote = "^0.6"
syn = "^0.15"
log = { version = "^0.4", optional = true }

[dev-dependencies]
kamikaze_di = { version = "*", path = "../kamikaze_di" }
